--- a/calculadora.html
+++ b/calculadora.html
@@ -7,35 +7,55 @@
            
             <script>
              $(document).ready(function(){
-              btn_um.onclick = function(){$("#campo").val("1");}
-              btn_dois.onclick = function(){} 
-              btn_tres.onclick = function(){} 
-              btn_adicao.onclick = function(){}
-              btn_porcentagem.onclick = function(){}
 
-              btn_quatro.onclick = function(){}
-              btn_cinco.onclick = function(){}
-              btn_seis.onclick = function(){}
-              btn_subtracao.onclick = function(){}
-              btn_potencia.onclick = function(){}
+                let operacao;
+                let total;
+                let um;
+                let dois;
+                let tres;
+                let quatro;
+                let cinco;
+                let seis;
+                let sete;
+                let oito;
+                let nove;
+                let zero;
+                let soma;
+                let subtracao;
+                let divicao;
+                let multiplicacao;
+                let potencia;
+                let porcentagem;
 
-              btn_sete.onclick = function(){}
-              btn_oito.onclick = function(){}
-              btn_nove.onclick = function(){}
-              btn_divisao.onclick = function(){}
-              btn_pa.onclick = function(){}
+              btn_um.onclick = function(){$("#campo").val("1"); um = 1;}
+              btn_dois.onclick = function(){$("#campo").val("2"); dois = 2;} 
+              btn_tres.onclick = function(){$("#campo").val("3"); tres = 3;} 
+              btn_adicao.onclick = function(){$("#campo").val("+"); operacao = "a"}
+              btn_porcentagem.onclick = function(){$("#campo").val("%"); operacao = "por"}
 
-              btn_ponto.onclick = function(){}
-              btn_zero.onclick = function(){}
-              btn_virgula.onclick = function(){}
-              btn_multiplicacao.onclick = function(){}
-              btn_pf.onclick = function(){}
+              btn_quatro.onclick = function(){$("#campo").val("4");quatro = 4;}
+              btn_cinco.onclick = function(){$("#campo").val("5"); cinco = 5;}
+              btn_seis.onclick = function(){$("#campo").val("6"); seis = 6;}
+              btn_subtracao.onclick = function(){$("#campo").val("-"); operacao = "s"}
+              btn_potencia.onclick = function(){$("#campo").val("^"); operacao = "pot"}
 
-              btn_igual.onclick = function(){}
-              btn_reiniciar.onclick = function(){}
+              btn_sete.onclick = function(){$("#campo").val("7"); sete = 7;}
+              btn_oito.onclick = function(){$("#campo").val("8"); oito = 8;}
+              btn_nove.onclick = function(){$("#campo").val("9"); nove = 9;}
+              btn_divisao.onclick = function(){$("#campo").val(":"); operacao = "d"}
+              btn_pa.onclick = function(){$("#campo").val("pa"); operacao}
+
+              btn_ponto.onclick = function(){$("#campo").val(".");}
+              btn_zero.onclick = function(){$("#campo").val("0");}
+              btn_virgula.onclick = function(){$("#campo").val(",");}
+              btn_multiplicacao.onclick = function(){$("#campo").val("x");}
+              btn_pf.onclick = function(){$("#campo").val("pf");}
+
+              btn_igual.onclick = function(){$("#campo").val("=");}
+              btn_reiniciar.onclick = function(){$("#campo").val("reiniciar");}
             });
 
-                alert("Hello Moto");
+                alert("Calculadora Coquete");
             </script>
             
 
